# GTestDemo

./: CMakeLists.txt  jenkinsfile
src/: CMakeLists.txt  function.cpp  function.h
test/: CMakeLists.txt  Test.cpp
